@@ -273,6 +273,10 @@ moet dat in principe geen probleem zijn, maar let wel op dat
 je geen compiler/systeem-specifieke dingen gebruikt (afhankelijk van
 de configuratie kun je bij een compileerfout de foutmelding bekijken).
 
+Binnen het jury-systeem worden \cmd{ONLINE\_JUDGE} en \cmd{DOMJUDGE}
+gedefinieerd: als preprocessor symbolen in gecompileerde talen, als
+(environment) variabelen in scripttalen.
+
 \subsection{Testen}
 
 Als je programma succesvol gecompileerd is, wordt het gedraaid en de
