@@ -258,6 +258,10 @@ not be a problem. Be careful however, not to use any special compiler
 and/or system specific things (you may be able to check compiler errors
 on the team page).
 
+The jury system defines \cmd{ONLINE\_JUDGE} and \cmd{DOMJUDGE}.
+These are defined as preprocessor symbols in gecompiled languages and
+as (environment) variables in scripted languages.
+
 \subsection{Testing}
 
 After your program has compiled successfully it will be executed and
