@@ -40,6 +40,8 @@ if [ "\${0%/*}" != "\$0" ]; then
 	cd "\${0%/*}"
 fi
 
+export ONLINE_JUDGE=1 DOMJUDGE=1
+
 exec perl "$MAINSOURCE"
 EOF
 
